Fix a z-index collision on the showcase

--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -9,7 +9,7 @@
 	 * covered up by the content when you hover over the parent menu item.
 	 */
 	position: relative;
-	z-index: 200;
+	z-index: 250;
 
 	@media (--tablet) {
 		position: sticky;
